# breachops-nav

./: .gitignore  .wakatime-project  CONTRIBUTING.md  Cargo.toml  README.md  code_of_conduct.md  kanbn.json  package.json  rustfmt.toml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: app.rs  lib.rs
src/: main.rs
