[workspace]
exclude = ["/.github/", "/assets/", "/scripts/"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
description = """
A personal bookmark management command-line tool
"""
authors = ["skyeBreach <skyebreach@proton.me>"]
categories = ["command-line-utilities"]
keywords = ["cli"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/skyeBreach/breachops-nav"
homepage = "https://github.com/skyeBreach/breachops-nav"
repository = "https://github.com/skyeBreach/breachops-nav"
edition = "2024"
rust-version = "1.85"
