[package]
name = "breachops-nav"
version = "0.1.0"
description = """
A personal bookmark management command-line tool
"""
authors = ["skyeBreach <skyebreach@proton.me>"]
categories = ["command-line-utilities"]
keywords = ["cli"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/skyeBreach/breachops-nav"
homepage = "https://github.com/skyeBreach/breachops-nav"
edition = "2024"
rust-version = "1.85"

[[bin]]
bench = false
path = "src/main.rs"
name = "bonav"
