[workspace]
resolver = "2"
members = ["crates/cli", "crates/core", "crates/utils"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = """
A personal bookmark management command-line tool
"""
authors = ["skyeBreach <skyebreach@proton.me>"]
categories = ["command-line-utilities"]
keywords = ["cli"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/skyeBreach/breachops-nav"
homepage = "https://github.com/skyeBreach/breachops-nav"
repository = "https://github.com/skyeBreach/breachops-nav"
