[package]
name = "breachops-nav_core"
version = "0.1.0"
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
breachops-nav_utils = { version = "0.1.0", path = "../utils" }
